trabalho picolo atualizado
mudanças codigo atualizadas

--- a/FormularioCSS-2/views/index.ejs
+++ b/FormularioCSS-2/views/index.ejs
@@ -18,6 +18,7 @@
         <div><%= pessoa.nome %> </div>
         <div><%= pessoa.sobrenome %> </div>
         <div>  <%= pessoa.idade %></div>
+        <div><a href="/pessoas/delete?id=<%= pessoa.id %>" class="excluir">Excluir </a></div>
     <% }) %>
     </div>
 
