--- a/FormularioCSS-2/public/estilo/estilo.css
+++ b/FormularioCSS-2/public/estilo/estilo.css
@@ -1,14 +1,34 @@
+body{
+    background-image: url(https://tm.ibxk.com.br/2015/06/15/15150935995121.jpg?ims=1200x675);
+  margin-left: 400px;
+  margin-top: 100px;
+
+}
+h1{
+    
+    margin-left: 220px;
+    color: white;
+}
 .formulario{
-    display: flex;
+   width: 500px;
+   height: 350px;
     flex-direction: column;
+    font-family:georgia;
+ text-align: center;
+ margin-left: 50px;
+ border-color: black;
+border-width: 2px;
 }
 
 input{
+
     width: 30%;
     height: 30px;
-    border-left: whitesmoke ;
-    border-top: whitesmoke ;
-    border-right: whitesmoke ;
+    border-color: rgb(0, 0, 0) ;
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    margin-left: 170px;
 }
 
 .cadastroo{
@@ -16,17 +36,19 @@ input{
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 50;
+    
 }
 
-article div{
-    padding: 50px;
-}
+
 
 .inputs{
-    width: 30%;
-    height: 30px;
-    border-left: whitesmoke ;
-    border-top: whitesmoke ;
-    border-right: whitesmoke ;
+   
+    color: black;
+    border-color: rgb(0, 0, 0) ;
     text-decoration: none;
+  
+}
+
+.label{
+border-color: black;
 }
